# mu-analytics

./: .gitignore  README.md  admin_usage.py  anomaly_worklist.py  audit_sweep.py  cc_telemetry.py  config.example.toml  cost.py  daily_receipts.py  degradation.py  demo_data.py  engine.py  features.py  gen_dashboard.py  incidents.py  index.html  judge_incremental.py  judge_store.py  justfile  marks_store.py  panels.py  pyproject.toml  refresh.sh  run  sample_data.py  scans.py  session_timings.py
.github/workflows/: ci.yml
behavior-judge/: AGENTS.md  METHODOLOGY.md  README.md  RELATED-WORK.md
behavior-judge/judge/: behavior-judge-system-prompt.txt  rubric.md
behavior-judge/scripts/: behavior_rates.py  frustration_lift.py  render_transcript.py  run_judge.py  run_judge_batch.py
docs/: HANDOFF.md  dashboard_audit_2026-06-17.md  directive-adherence.md  subscription_accounting_design.md
ops/: judge-cron.sh  refresh-cron.sh
proto/: index.html
scripts/: adherence_probe.py  ai-review-system-prompt.txt  ai-review.sh  context_disparity.py  fp_sample.py  outcome.py  outcome_powered.py  pre-pr-check.sh  verify-claims.sh  violations.py  violations_powered.py  windowed.py
tests/: fixtures.py  test_admin_usage.py  test_anomaly_worklist.py  test_audit_sweep.py  test_behavior_scan.py  test_cc_parity.py  test_cc_telemetry.py  test_degradation.py  test_delegations.py  test_engine.py  test_features.py  test_incidents.py  test_marks_store.py  test_panels.py  test_sample_data.py  test_scans.py  test_session_timings.py
